--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h4>Offcial Store</h4>
         </div>
           <div class="topbtn">
-            <a href="http://127.0.0.1:5500/logni.html"><button type="button"><i class="fa-solid fa-user"></i></button></a>
+            <a href="/login.html"><button type="button"><i class="fa-solid fa-user"></i></button></a>
             <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
           </div>
             <div class="searchbar">
