changes in link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h4>Offcial Store</h4>
         </div>
           <div class="topbtn">
-            <a href="/login.html"><button type="button"><i class="fa-solid fa-user"></i></button></a>
+            <a href="https://monishsivabalaji.github.io/project1/login.html"><button type="button"><i class="fa-solid fa-user"></i></button></a>
             <button type="button"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
           </div>
             <div class="searchbar">
@@ -84,7 +84,7 @@
                 <h5>Please allow an estimated 3-4 additional business days for personalised items <br> regardless of chosen shipping option.</h5>
             </div>
                 <div class="cartbutton">
-                    <a href="http://127.0.0.1:5500/logni.html"><button>Add to Cart</button></a>
+                    <a href="https://monishsivabalaji.github.io/project1/login.html"><button>Add to Cart</button></a>
                 </div>
         </div>
     </div>
@@ -121,7 +121,7 @@
                 <h1>Urban Purist</h1>
                 <h4>Redefining sportswear through timeless urban style.</h4>
                 
-                <a href="http://127.0.0.1:5500/logni.html"><button>Shop now</button></a>
+                <a href="https://monishsivabalaji.github.io/project1/login.html"><button>Shop now</button></a>
             </div>
             <div class="tail">
                 <div class="rmlogo">
@@ -131,7 +131,7 @@
                     <h5>Real Madrid CF shop © 2024 All Rights Reserved</h5>
                 </div>
                 <div>
-                    <a href="http://127.0.0.1:5500/logni.html"><button>Sign in</button></a>
+                    <a href="https://monishsivabalaji.github.io/project1/login.html"><button>Sign in</button></a>
                 </div>
                 <div>
                     <h3>Sign up and receive 5% off your first purchase</h3>
